Fixed link icon spacing

--- a/app/assets/stylesheets/pages/assessments.sass
+++ b/app/assets/stylesheets/pages/assessments.sass
@@ -98,6 +98,8 @@
         margin-bottom: 0px
         i
           color: white
+          padding-right: .5em
+          min-width: 1.5em
         &:last-child
           border-bottom: 2px solid #dcdbd4
         &.active
